service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fastapi-service
spec:
  selector:
    app: fastapi-video-analysis
  ports:
    - protocol: TCP
      port: 80  # External port
      targetPort: 8000  # Port in container
  type: LoadBalancer  # Change to LoadBalancer for external access
